src/index.css
@import "tailwindcss";

@theme {
  --color-health-red: #a80000;
}

@keyframes marquee {
  0% {
    transform: translate3d(0, 0, 0);
  }

  100% {
    transform: translate3d(-50%, 0, 0);
  }
}

.animate-marquee {
  display: inline-flex;
  width: max-content;
  animation: marquee 30s linear infinite;
  will-change: transform;
}

.video-placeholder {
  aspect-ratio: 16 / 9;
  background-color: #000;
  position: relative;
}

@keyframes pulse-fast {

  0%,
  100% {
    transform: scale(1);
  }

  50% {
    transform: scale(1.05);
  }
}

.animate-pulse-fast {
  animation: pulse-fast 1.5s ease-in-out infinite;
}

/* VTurb Smartplayer pitch delay class */
.hide {
  display: none;
}

.hide_upsell1 {
  display: none;
}

.hide_upsell2 {
  display: none;
}


/* Facebook Comment Lines */
.fb-reply-line {
  position: relative;
}

.fb-reply-line::before {
  content: "";
  position: absolute;
  top: -24px;
  bottom: 0px;
  left: 20px;
  width: 2px;
  background-color: #E5E7EB;
  /* gray-200 */
}

/* First reply gets a full line all the way to its center and curves right */
.fb-reply-line-first::before {
  bottom: 50%;
  border-bottom-left-radius: 8px;
}

.fb-reply-line-first::after {
  content: "";
  position: absolute;
  bottom: 50%;
  left: 20px;
  width: 16px;
  height: 2px;
  background-color: #E5E7EB;
}

/* Subsequent replies just get the vertical line extending downwards, connecting to the previous one */
.fb-reply-line-middle::before {
  /* extends full height as defined in base class */
}

.fb-reply-line-middle::after {
  content: "";
  position: absolute;
  top: 50%;
  left: 20px;
  width: 16px;
  height: 2px;
  background-color: #E5E7EB;
}

/* The final reply curves and ends */
.fb-reply-line-last {
  position: relative;
}

.fb-reply-line-last::before {
  content: "";
  position: absolute;
  top: -24px;
  height: calc(50% + 24px);
  left: 20px;
  width: 2px;
  background-color: #E5E7EB;
  /* gray-200 */
  border-bottom-left-radius: 8px;
}

.fb-reply-line-last::after {
  content: "";
  position: absolute;
  top: 50%;
  /* center relative to current avatar */
  left: 20px;
  width: 16px;
  height: 2px;
  background-color: #E5E7EB;
}

/* Top Level Comment extending line down when it has replies */
.fb-comment-has-replies {
  position: relative;
}

.fb-comment-has-replies::after {
  content: "";
  position: absolute;
  top: 40px;
  /* Below avatar */
  bottom: -10px;
  /* into the replies */
  left: 20px;
  /* Center of 40px avatar */
  width: 2px;
  background-color: #E5E7EB;
  z-index: 0;
}

